cargo-features = ["trim-paths"]

[package]
name = "felty-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
felty = { path = "../crates/felty" }

[build-dependencies]
felty-build = { path = "../crates/felty-build" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
trim-paths = true
