cargo-features = ["trim-paths"]

[package]
name = "felty"
version = "0.1.0"
edition = "2021"
authors = ["Kotone Fami <fami@ktnfm.com>"]
description = "Super lightweight window creation framework based Sister-colored Shalfelt"
license = "MIT"

[dependencies]
wry = "0.47.2"
idna_adapter = "=1.0.0"
tao = "0.31.0"
muda = "0.15.3"
tokio = { version = "1.44.2", features = ["rt"], default-features = false }
os_info = { version = "3.9.1", default-features = false }
http = { version = "1.2.0", default-features = false }
http_req = "0.13.1" # dev only
log = "0.4.27"
waitpid-any = "0.3.0"
time = { version = "0.3.43", features = ["local-offset"], default-features = false, optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
icns = "0.3.1"
ico-builder = "0.1.1"
image = "0.25.5"
semver = "1.0.26"
winapi = { version = "0.3.9", features = ["winnt"] }
winresource = "0.1.23"

[features]
default = ["log"]
log = ["dep:time"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
trim-paths = true
